Fix overflowing tables on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -164,3 +164,8 @@ nav {
     display: unset;
   }
 }
+
+table {
+  overflow-x: scroll;
+  display: block;
+}
